Minor changes and small adjustments.
Added DataCollector library project.

--- a/RepChecker/RepChecker.csproj
+++ b/RepChecker/RepChecker.csproj
@@ -25,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataCollector\DataCollector.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Page Update="Theme\SubMenuButtonTheme.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
