--- a/RepChecker/RepChecker.csproj
+++ b/RepChecker/RepChecker.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Nito.AsyncEx.Context" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataCollector\DataCollector.csproj" />
+    <ProjectReference Include="..\ApiRestClient\RepDataCollector.csproj" />
   </ItemGroup>
 
   <ItemGroup>
