--- a/RepChecker/RepChecker.csproj
+++ b/RepChecker/RepChecker.csproj
@@ -29,6 +29,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Nito.AsyncEx.Context" Version="5.1.0" />
   </ItemGroup>
 
